--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ sqlDelightVersion = "2.0.0"
 koin = "3.5.3"
 touchlabVersion = "2.0.6"
 kamel = "0.9.2"
+shimmer = "1.2.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -61,6 +62,7 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 touchlab = { module = "co.touchlab:stately-common", version.ref = "touchlabVersion" }
 kamel = { module = "media.kamel:kamel-image", version.ref = "kamel" }
+shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "shimmer" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
