--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,20 +10,20 @@ androidx-core-ktx = "1.12.0"
 androidx-espresso-core = "3.5.1"
 androidx-material = "1.11.0"
 androidx-test-junit = "1.1.5"
+kotlin = "1.9.23"
 compose = "1.6.1"
-compose-compiler = "1.5.8"
-compose-plugin = "1.5.11"
 junit = "4.13.2"
-kotlin = "1.9.21"
 voyager = "1.0.0"
 size = "0.3.1"
 coroutinesVersion = "1.7.3"
 ktorVersion = "2.3.7"
 sqlDelightVersion = "2.0.0"
 koin = "3.5.3"
+koin-compose = "3.6.0-wasm-alpha2"
 touchlabVersion = "2.0.6"
 kamel = "0.9.2"
 shimmer = "1.2.0"
+settings = "1.1.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -60,14 +60,16 @@ sqldelight-native = { module = "app.cash.sqldelight:native-driver", version.ref 
 sqldelight-sqlite = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelightVersion" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose" }
 touchlab = { module = "co.touchlab:stately-common", version.ref = "touchlabVersion" }
 kamel = { module = "media.kamel:kamel-image", version.ref = "kamel" }
 shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "shimmer" }
+settings = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "settings" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelightVersion" }
-jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
+jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
