--- a/.github/workflows/android-build.yaml
+++ b/.github/workflows/android-build.yaml
@@ -29,7 +29,7 @@ jobs:
           cache: gradle
 
       - name: Build a debug APK
-        run: ./gradlew :composeApp:main:assembleDebug
+        run: ./gradlew :composeApp:src:main:assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v3.1.1
