--- a/.github/workflows/android-build.yaml
+++ b/.github/workflows/android-build.yaml
@@ -35,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v3.1.1
         with:
           name: NotesMultiplatform.apk
-          path: :composeApp/build/outputs/apk/debug/composeApp-debug.apk
+          path: ./composeApp/build/outputs/apk/debug/composeApp-debug.apk
