--- a/.github/workflows/android-build.yaml
+++ b/.github/workflows/android-build.yaml
@@ -1,11 +1,9 @@
 name: AndroidBuild
 
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to build'
-        required: true
+  push:
+    tags:
+      - '*-android'
 
 jobs:
   build:
