--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,14 +11,15 @@ androidx-espresso-core = "3.5.1"
 androidx-material = "1.11.0"
 androidx-test-junit = "1.1.5"
 kotlin = "1.9.23"
-compose = "1.6.1"
+compose = "1.6.6"
+compose-plugin = "1.6.2"
 junit = "4.13.2"
 size = "0.3.1"
 coroutinesVersion = "1.7.3"
 ktorVersion = "2.3.7"
 sqlDelightVersion = "2.0.0"
-koin = "3.5.3"
-koin-compose = "3.6.0-wasm-alpha2"
+koin = "3.6.0-Beta2"
+koin-compose = "1.2.0-Beta2"
 touchlabVersion = "2.0.6"
 kamel = "0.9.2"
 shimmer = "1.2.0"
@@ -68,6 +69,6 @@ settings = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelightVersion" }
-jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose" }
+jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
