--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ shimmer = "1.2.0"
 settings = "1.1.1"
 compose-navigation = "2.8.0-alpha02"
 compose-lifecycle = "2.8.0-beta01"
+accompanist-permissions = "0.32.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -64,6 +65,7 @@ touchlab = { module = "co.touchlab:stately-common", version.ref = "touchlabVersi
 kamel = { module = "media.kamel:kamel-image", version.ref = "kamel" }
 shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "shimmer" }
 settings = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "settings" }
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist-permissions" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
