--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,29 +3,29 @@ agp = "8.1.4"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
-androidx-activityCompose = "1.8.2"
+androidx-activityCompose = "1.9.0"
 androidx-appcompat = "1.6.1"
 androidx-constraintlayout = "2.1.4"
-androidx-core-ktx = "1.12.0"
+androidx-core-ktx = "1.13.1"
 androidx-espresso-core = "3.5.1"
-androidx-material = "1.11.0"
+androidx-material = "1.12.0"
 androidx-test-junit = "1.1.5"
 kotlin = "1.9.23"
-compose = "1.6.6"
+compose = "1.6.7"
 compose-plugin = "1.6.2"
 junit = "4.13.2"
 size = "0.3.1"
-coroutinesVersion = "1.7.3"
-ktorVersion = "2.3.7"
+coroutinesVersion = "1.8.0"
+ktorVersion = "2.3.10"
 sqlDelightVersion = "2.0.0"
 koin = "3.6.0-Beta2"
 koin-compose = "1.2.0-Beta2"
 touchlabVersion = "2.0.6"
-kamel = "0.9.2"
+kamel = "0.9.4"
 shimmer = "1.2.0"
 settings = "1.1.1"
 compose-navigation = "2.8.0-alpha02"
-compose-lifecycle = "2.8.0-beta01"
+compose-lifecycle = "2.8.0-rc03"
 accompanist-permissions = "0.32.0"
 chaintech = "1.0.5"
 calf = "0.4.0"
