--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -7,10 +7,11 @@
     />
 
     <uses-permission android:name="android.permission.CAMERA"/>
-
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <application
+            android:name=".NotesMultiplatformApplication"
             android:allowBackup="true"
             android:usesCleartextTraffic="true"
             android:icon="@mipmap/ic_launcher"
