--- a/.github/workflows/deploy-android-release.yaml
+++ b/.github/workflows/deploy-android-release.yaml
@@ -37,6 +37,9 @@ jobs:
           gradlePath: composeApp/build.gradle.kts
           versionCode: ${{ github.run_number }}
 
+      - name: Assemble Release Bundle
+        run: ./gradlew bundleRelease
+
       - name: Sign Release
         uses: r0adkll/sign-android-release@v1
         with:
